
Correct Dumps:
Bell: Cosmic Flash (sound ROM - might need a redump because it contains an illegal instruction in one byte?)
      Super Bowl (sound ROM redump showed one byte of difference)
LTD:  Space Poker
WMS:  Black Knight 2000: redumped LG-1 (German) version, startup text is no longer corrupt
      NBA Fastbreak: Changed 2.1, 2.2 & 2.3 to also use the newer sound ROM S3.0
      The Shadow: Fix checksum of LH-6 with wrong text index patch
Zaccaria: Star God (correct sound ROMs)

Clones:
Airborne Avenger (Free Play)
Ali (7-digit conversion Free Play rev. 76)
Atarians (Free Play)
Bad Girls (alternate set)
Baywatch 3.00 (German)
Beavis and Butt-Head (Class of 1812 MOD)
Big Game (MOD rev. 12)
Black Knight L-2
Bugs Bunny's Birthday Ball LG-2 (German)
Cue Ball Wizard (older display rev.)
Devil's Dare (Sound & Speech alternate set)
Diner LG-2 (German)
Dracula (One Ball MOD)
Earth, Wind & Fire (Free Play), (alternate sound)
Elvira and the Party Monsters LG-3 (German) (incomplete dump)
Elvis 1.00
Farfalla (French Speech)
Fire Mountain (Free Play)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Future World (Free Play)
Galaxy (7-Digit conversion, Fixes & modified rules)
Hook 4.01 (French), 4.00 (incomplete dumps)
Hot Wheels (Free Play)
House of Diamonds (Free Play)
Jungle Lord (new tricks) L-2beta, L-2 & L-3beta (MOD)
Lightning (Free Play & MOD rev. 25)
Locomotion (Free Play)
Metallica 0.52
Mexico 86 (Italian Speech)
Middle Earth (Free Play)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2, J-3 (PEMBOT (no relation)) (MOD)
Royal Flush Deluxe rev. 1
Scared Stiff 1.1
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Shooting the Rapids (Free Play)
Space Riders (Free Play)
Space Shuttle (Zaccaria) (Free Play)
Spirit (initial release) & rev. 3 (MOD)
Star God (Free Play), (alternate sound, Free Play)
Striker (German Speech), (French Speech)